# RoboFriend

./: .gitignore  .gitmodules  README.md
datasheets/amp/: info.txt
datasheets/servo/: info.txt
datasheets/uc/: info.txt  pinout.xlsx
documentation/: Odom2019-10-14.xls  Strommessung.ods  accu_time_voltage.xlsx
documentation/Joystick control values/: javascript.txt  left.xlsx  right.xlsx
documentation/WS18/: battery-value-percent-mapping.ods  control-text.odt  dokumentation-zahedim.odt
ideas/: .~lock.Anhaltspunkte.docx#  Anhaltspunkte.docx  todo.txt
pcb/bom/: bom-v1.xls  bom-v2.xls  bom.xls
pcb/gerber/: robofriend-B.Cu.gbr  robofriend-B.SilkS.gbr  robofriend-Edge.Cuts.gbr  robofriend-F.Cu.gbr  robofriend-F.SilkS.gbr  robofriend-NPTH.drl  robofriend.drl
pcb/kicad/: _saved_robofriend.sch  robofriend-cache.lib  robofriend-rescue.lib  robofriend.bak  robofriend.dsn  robofriend.kicad_pcb  robofriend.kicad_pcb-bak  robofriend.net  robofriend.pro  robofriend.sch  robofriend.xml
pcb/power-supply/: power-supply-cache.lib  power-supply.bak  power-supply.kicad_pcb  power-supply.kicad_pcb-bak  power-supply.net  power-supply.pro  power-supply.sch
pcb/track-width/: track-width.xlsx
pcb/veigl/: test-cache.lib  test.bak  test.html  test.kicad_pcb  test.kicad_pcb-bak  test.net  test.pro  test.sch  test.xml
simulation/: relais.asy
src/Pi/: log1.txt  (+13 more)
src/RemotePC/catkin_ws/src/roboFriendMsgs/: CMakeLists.txt  package.xml
src/RemotePC/catkin_ws/src/roboFriendMsgs/msg/: robofriendDrive.msg
src/RemotePC/catkin_ws/src/roboFriendMsgs/srv/: driveInChargingStation.srv
(+458 files in other folders)
